switched to gcc for preprocessing to remove a dependency and to fix a problem related to comments in imported h files

--- a/doc/src/usage.tex
+++ b/doc/src/usage.tex
@@ -11,6 +11,7 @@ This chapter is intended to give the informations necessary for installing and u
  \item An x86 Fortran compiler.
  \item Python v2.6.x, Python v2.7.x or compatible.
  \item GNU Make 3.81.
+ \item GNU gcc or clang (aliased to gcc).
  \item A POSIX compatible operating system.
  \item (optional) \verb|valgrind| is recommended if you would like to use the test system shipped with this framework (accessible through \verb|make tests|).
  \item (optional) Allinea DDT if you need parallel debugging on the device.
