fixed more complex patterns with temporary data using openACC update

--- a/doc/src/usage.tex
+++ b/doc/src/usage.tex
@@ -112,7 +112,9 @@ nx 2 ny 3
 
 \section{Getting Started}
 \begin{enumerate}
- \item Clone \url{http://github.com/muellermichel/Hybrid-Fortran} to your computer used for development. Make sure your system meets the dependencies specified in section \ref{sec:dependencies}.
+ \item Make sure your system meets the dependencies specified in section \ref{sec:dependencies}.
+ \item Make sure that at least your compiler is working correctly. The \verb|doc| folder provides a sample \verb|bashrc| file that may help you setting up your environment for both the required and optional dependencies.
+ \item Clone \url{http://github.com/muellermichel/Hybrid-Fortran} to your computer used for development.
  \item Set the environment variable \verb|HF_DIR| to the location under which you have installed Hybrid Fortran.
  \item \verb|cd| into the Hybrid Fortran directory you've now installed on your computer.
  \item Run \verb|make example|. This creates a new project directory named \verb|example|.
