documenting currently best PGI version to use with HF, fixed module data example

--- a/doc/src/usage.tex
+++ b/doc/src/usage.tex
@@ -7,7 +7,7 @@ This chapter is intended to give the informations necessary for installing and u
 \textbf{Hybrid Fortran} requires the following software components:
 
 \begin{enumerate}
- \item A compiler for either OpenACC Fortran (Cray or PGI (only PGI tested so far)) or CUDA Fortran (PGI).
+ \item A compiler for either OpenACC Fortran or CUDA Fortran (PGI Accelerator v14.7 recommended).
  \item An x86 Fortran compiler.
  \item Python v2.6.x, Python v2.7.x or compatible.
  \item GNU Make 3.81.
