added readme to simple weather

--- a/doc/src/references.bib
+++ b/doc/src/references.bib
@@ -82,10 +82,10 @@
 
 @Misc{TsubameTop500,
   author = {TOP500},
-  title = {{TSUBAME} 2.0 Ranking},
+  title = {{TSUBAME} 2.5 Ranking},
   year = {2012},
   type = {website},
-  howpublished = {\url{http://i.top500.org/system/10588}},
+  howpublished = {\url{http://www.top500.org/system/178249}},
   note = {[Online; accessed October 4, 2012]}
 }
 
